syntax = "proto3";

option csharp_namespace = "Grapevine.Edge";

package grapevine;

// The trigonometry service definition.
service Trigonometry {
  // Sends a stream of Trigonometry numbers
  rpc StreamTrigonometries (TrigonometryRequest) returns (stream TrigonometryReply);
}

// The request message containing the parameters.
message TrigonometryRequest {
  int32 start = 1;
  int32 count = 2;
}

// The response message containing the trigonometries.
message TrigonometryReply {
  int32 num = 1;
  double sin = 2;
  double cos = 3;
  double tan = 4;
}
